# gphoto

./: README
bindings/libgphoto2-java/: configure.ac
build-tests/dynlibtest/: Makefile.am  README  autogen.sh  configure.in  run-test.sh
gnocam/: .cvsignore  AUTHORS  ChangeLog  DONT_USE_THIS_VERSION  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  autogen.sh  configure.in  gnocam.desktop  gnocam.spec.in
gnocam/applet/: .cvsignore  GNOME_GnoCamApplet.server.in.in  GNOME_GnoCamApplet.xml  GNOME_GnocamApplet.server.in.in  GNOME_GnocamApplet.xml  Makefile.am  gnocam-applet-cam.c  gnocam-applet-cam.h  gnocam-applet-marshal.list  gnocam-applet.c  gnocam-applet.desktop.in  gnocam-applet.gnorba  gnocam-applet.h  gnocam-applet.schemas  gnocam-prefs.c  gnocam-prefs.h  main.c
gnocam/art/: Makefile.am
gnocam/bonobo-moniker/: .cvsignore  Bonobo_Moniker_camera.oaf.in  Makefile.am  bonobo-moniker-camera.c  bonobo-moniker-camera.h  bonobo-storage-camera.c  bonobo-storage-camera.h  bonobo-stream-camera.c  bonobo-stream-camera.h  gnocam-capture.c  gnocam-control-file.c  gnocam-control-file.h  gnocam-control-folder.c  gnocam-control-folder.h  gnocam-control.c  gnocam-control.h  gnocam-file.c  gnocam-file.h  gnocam-folder.c  gnocam-folder.h  gnocam-storage-view.c  gnocam-storage-view.h  utils.c  utils.h
gnocam/bonobo-storage-module/: .cvsignore  Makefile.am  bonobo-storage-camera.c  bonobo-storage-camera.h  bonobo-storage-vfs.c  bonobo-stream-camera.c  bonobo-stream-camera.h  bonobo-stream-vfs.c  utils.c  utils.h
gnocam/capplet/: .cvsignore  Makefile.am  camera-capplet.c  camera-capplet.desktop  camera-capplet.desktop.in.in  capplet-callbacks.c  capplet-callbacks.h  capplet.c  capplet.h  gnocam-camera-druid.c  gnocam-capplet-content.c  gnocam-capplet-content.h  gnocam-capplet-model.c  gnocam-capplet-model.h  gnocam-capplet-table-scrolled.c  gnocam-capplet-table-scrolled.h  gnocam-capplet-table.c  gnocam-capplet-table.h  gnocam-capplet.c  gnocam-capplet.desktop.in.in  gnocam-capplet.h  gnocam-chooser.h  gphoto-extensions.c  main.c  preferences.c  preferences.h  properties.c  properties.h
gnocam/gnocam/: .cvsignore  GNOME_GnoCam.oaf.in  Makefile.am  bonobo-storage-camera.c  bonobo-storage-camera.h  bonobo-stream-camera.c  bonobo-stream-camera.h  gnocam-cache.c  gnocam-camera-selector.c  gnocam-camera-selector.h  gnocam-camera.c  gnocam-camera.h  gnocam-capture.c  gnocam-configuration.c  gnocam-main.c  gnocam-main.h  gnocam-util.c  gnocam-util.h  main.c
gnocam/gnome-vfs-module/: Makefile.am  README  camera-dir.c  camera-dir.h  camera-file.c  camera-file.h  camera-method.c  camera-method.c.bonobo  camera-methods.conf  camera-utils.c  camera-utils.h  gphoto-extensions.c  utils.c  utils.h
gnocam/idl/: GNOME_C.idl  GnoCam.idl  Gphoto.idl  Makefile.am
gnocam/intl/: .cvsignore
gnocam/libgnocam/: .cvsignore  Makefile.am  bonobo-extensions.c  bonobo-extensions.h  gnocam-camera-druid.c  gnocam-camera-druid.h  gnocam-capplet-model.c  gnocam-capplet-model.h  gnocam-capplet-table-scrolled.c  gnocam-capplet-table-scrolled.h  gnocam-capplet-table.c  gnocam-chooser.c  gnocam-chooser.h  gnocam-configuration.c  gnocam-configuration.h  gnocam-prefs.c  gnocam-prefs.h  gnocam-util.c  gnocam.glade  gphoto-extensions.c  gphoto-extensions.h
gnocam/macros/: Makefile.in
gnocam/po/: .cvsignore  ChangeLog  GnoCam.pot  POTFILES.in  cat-id-tbl.c  no.gmo  no.po  update.pl  update.sh
gnocam/src/: .cvsignore  Makefile.am  Makefile.in  callbacks-gallery.c  callbacks-preview.c  callbacks.c  callbacks.h  camera_properties.c  camera_properties.h  cameras.c  cameras.h  capture.c  capture.h  e-shell-folder-title-bar.c  file-operations.c  file-operations.h  frontend.c  frontend.h  gallery.c  gallery.h  gnocam-camera.c  gnocam-camera.h  gnocam-capture.c  gnocam-capture.h  gnocam-configuration.c  gnocam-configuration.h  gnocam-file.c  gnocam-file.h  gnocam-folder.c  gnocam-folder.h  gnocam-main.c  gnocam-main.h  gnocam-preferences.c  gnocam-preferences.h  gnocam-shortcut-bar.c  gnocam-shortcut-bar.h  gnocam-storage-view.c  gnocam-storage-view.h  gnocam.c  gnocam.glade  (+17 more)
gnocam/tests/: .cvsignore  Makefile.am  test-gnocam.c  test-libgnocam.c  test-moniker.c  test-vfs-module.c  test-vfs.c
gphoto/: .cvsignore  AUTHORS  BUGS  CONTACTS  CREDITS  CVS-info  ChangeLog  DEPENDS  FAQ  HACKING  INSTALL  LETTER  MANUAL  Makefile  Makefile.am  NEWS  PROGRAMMERS  README  SUPPORTED  THANKS  THEMES  TODO  acconfig.h  acinclude.m4  autogen.sh  configure.in  defines.h.in  gphoto-bug  gphoto.desktop  gphoto.spec  gphoto.spec.in
gphoto-suite/: Makefile.am  NEWS  README  README.gphoto-suite  TODO  build-config.sh  build-config.txt  checkout-config.txt  configure.ac  cvsupdiff
gphoto-suite/i18n-test/: Makefile.am  i18n-test.c
gphoto-suite/po/: de.po
gphoto-suite/tools/: Makefile-files  README.tools  check-includes  tarball-pathlengths.py
gphoto/barbie/: Makefile.am  barbie.c
gphoto/canon/: .cvsignore  Makefile.am  Protocol  README  canon.c  canon.h  crc.c  crc.h  mkpatch  psa50.c  psa50.h  serial.c  serial.h  util.c  util.h
gphoto/casio/: Make.depend  Makefile  Makefile.am  PROTOCOL  cam2jpgtab.h  casio.prj  casio_qv.c  casio_qv_defines.h  command.c  command.h  config.status  configure.c  jpeg.c  jpeg.h  jpegtab_f.h  printMsg.c  printMsg.h  qv_io.h  sdComm.c  sdCommDefines.h  sdcMessages.h
gphoto/cli/: README  photo.c
gphoto/digita/: Makefile.am  commands.c  (+2 more)
gphoto2-ftp/: .cvsignore  ChangeLog  Makefile.am  README  configure.in
libgpfs/: .cvsignore  ChangeLog  Makefile.am  README  autogen.sh  configure.in
libgpio/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  configure.in  gpio-config.in  gpio-ieee1394.c  gpio-ieee1394.h  gpio-network.c  gpio-network.h  gpio-parallel.c  gpio-parallel.h  gpio-serial.c  gpio-serial.h  gpio-socket.c  gpio-socket.h  gpio-test.c  gpio-usb.c  gpio-usb.h  gpio.c  gpio.h.in  gpioConf.sh.in  gpioos2.h  libgpio.spec.in  makefile.os2
libknc/: .cvsignore  ChangeLog  Makefile.am  PROTOCOL  README  configure.in
qtkam/: AUTHORS  Makefile.am  README  TODO  configure.in
(+1447 files in other folders)
