@XML_I18N_MERGE_DESKTOP_RULE@

SUBDIRS =\
 art\
 macros\
 idl\
 capplet\
 bonobo-moniker\
 gnome-vfs-module\
 gnocam\
 tests\
 intl\
 po

EXTRA_DIST =\
 AUTHORS\
 README\
 THANKS\
 TODO\
 gnocam.spec.in\
 gnocam.desktop\
 autogen.sh\
 xml-i18n-merge\
 xml-i18n-update\
 xml-i18n-extract

Graphicsdir = $(datadir)/gnome/apps/Graphics
Graphics_DATA = gnocam.desktop

