@XML_I18N_MERGE_DESKTOP_RULE@

SUBDIRS =\
 art\
 macros\
 idl\
 libgnocam\
 applet\
 capplet\
 bonobo-moniker\
 gnome-vfs-module\
 gnocam\
 tests\
 intl\
 po

EXTRA_DIST =\
 AUTHORS\
 README\
 THANKS\
 TODO\
 gnocam.desktop\
 autogen.sh\
 xml-i18n-merge.in\
 xml-i18n-update.in\
 xml-i18n-extract.in

Graphicsdir = $(datadir)/gnome/apps/Graphics
Graphics_DATA = gnocam.desktop

