AC_INIT(gnocam/main.c)
AC_PREREQ(2.50)

AM_INIT_AUTOMAKE(GnoCam, 0.14)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS

AM_MAINTAINER_MODE

CFLAGS="$CFLAGS -Wall -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Werror"
LDFLAGS="$LDFLAGS -g -Wall"
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

dnl ---------------------------------------------------------------------------
dnl libtool:
dnl ---------------------------------------------------------------------------
AM_PROG_LIBTOOL

dnl ---------------------------------------------------------------------------
dnl Internationalization: We need gettext and intltool
dnl ---------------------------------------------------------------------------
ALL_LINGUAS="no"
AM_GNU_GETTEXT
AC_PROG_INTLTOOL

dnl ---------------------------------------------------------------------------
dnl gtk+
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(GTK, gtk+-2.0)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

dnl ---------------------------------------------------------------------------
dnl gconf
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(GCONF, gconf-2.0)
AC_SUBST(GCONF_CFLAGS)
AC_SUBST(GCONF_LIBS)

dnl ---------------------------------------------------------------------------
dnl bonobo
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(BONOBO, libbonobo-2.0)
AC_SUBST(BONOBO_CFLAGS)
AC_SUBST(BONOBO_LIBS)
BONOBO_IDLDIR="`$PKG_CONFIG --variable=idldir libbonobo-2.0`"
AC_SUBST(BONOBO_IDLDIR)
BONOBO_ACT_IDLDIR="`$PKG_CONFIG --variable=idldir bonobo-activation-2.0`"
AC_SUBST(BONOBO_ACT_IDLDIR)
ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
AC_SUBST(ORBIT_IDL)

dnl ---------------------------------------------------------------------------
dnl gnome-vfs
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(VFS, gnome-vfs-module-2.0)
AC_SUBST(VFS_CFLAGS)
AC_SUBST(VFS_LIBS)

dnl ---------------------------------------------------------------------------
dnl libgphoto2
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(GPHOTO, libgphoto2)
AC_SUBST(GPHOTO_CFLAGS)
AC_SUBST(GPHOTO_LIBS)

dnl ---------------------------------------------------------------------------
dnl For gnocam, we need a couple of libraries.
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(GNOCAM, libbonobo-2.0 glib-2.0 libgphoto2)
AC_SUBST(GNOCAM_CFLAGS)
AC_SUBST(GNOCAM_LIBS)

dnl ---------------------------------------------------------------------------
dnl Makefiles
dnl ---------------------------------------------------------------------------
AC_OUTPUT([
Makefile
art/Makefile
po/Makefile.in
idl/Makefile
gnocam/Makefile
gnome-vfs-module/Makefile
tests/Makefile
])

dnl ---------------------------------------------------------------------------
dnl Feedback
dnl ---------------------------------------------------------------------------
echo "

Configuration

	Source code location: ${srcdir}
	Compiler:             ${CC}
"
