## Process this file with automake to generate a GNU Makefile

SUBDIRS = canon casio directory fuji gallery kodak \
kodak_generic konica konica_qmxxx man minolta mustek nikon \
philips photopc ricoh sony src

gphotodocdir = $(datadir)/doc/gphoto

gphotodoc_DATA = AUTHORS MANUAL

EXTRA_DIST = $(gphotodoc_DATA) NEWS README THEMES TODO COPYING THANKS \
	ChangeLog FAQ INSTALL PROGRAMMERS gphoto.spec configure \
	gphoto.desktop

sysdir = $(datadir)/gnome/apps/Graphics
sys_DATA = gphoto.desktop

