dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/gallery.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gphoto, 0.3.3-pre)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

dnl Checks for libraries.
dnl Check -ldl
AC_CHECK_LIB(dl, dlopen)
dnl Check for X
AC_PATH_X
dnl Check -ljpeg:
AC_CHECK_LIB(jpeg, jpeg_start_decompress)
dnl Check for glib
AM_PATH_GLIB(1.2.0)
dnl Check for gtk
AM_PATH_GTK(1.2.0)
dnl Check for gdk_imlib
AM_PATH_GDK_IMLIB(1.4.0)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_HEADERS(sys/param.h termios.h sgetty.h ttold.h ioctl-types.h \
	fcntl.h sgtty.h sys/ioctl.h sys/time.h termio.h unistd.h \
	endian.h byteswap.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Check if TIOCM_RTS is included in one of several possible files
AC_TRY_COMPILE([#include <termios.h>], [int foo = TIOCM_RTS;], 	
			AC_DEFINE(HAVE_RTS_IOCTL))
AC_TRY_COMPILE([#include <termio.h>], [int foo = TIOCM_RTS;], 	
			AC_DEFINE(HAVE_RTS_IOCTL))
AC_TRY_COMPILE([#include <ioctl-types.h>], [int foo = TIOCM_RTS;], 	
			AC_DEFINE(HAVE_RTS_IOCTL))
AC_TRY_COMPILE([#include <sys/ioctl.h>], [int foo = TIOCM_RTS;], 	
			AC_DEFINE(HAVE_RTS_IOCTL))

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(setreuid mkdir mktime strcspn strdup strerror strtol select)

dnl Local setup
dnl Is there a better way of doing docs?
docdir='${prefix}/doc/gphoto'
AC_SUBST(docdir)
driversdir='${pkgdatadir}/drivers'
AC_SUBST(driversdir)
gallerydir='${pkgdatadir}/gallery'
AC_SUBST(gallerydir)

AC_OUTPUT(konica/Makefile casio/Makefile philips/Makefile fuji/Makefile \
	photopc/Makefile kodak/Makefile ricoh/Makefile \
	sony/Makefile directory/Makefile src/Makefile src/icons/Makefile \
	gallery/Makefile gallery/Default/Makefile gallery/RedNGray/Makefile \
	gallery/CSStheme/Makefile man/Makefile Makefile gphoto.spec)








