dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/gallery.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(gphoto, 0.4.4)

AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros)

dnl GNOME_INIT not yet....

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

dnl Completed by AM_INIT_AUTOMAKE
dnl AC_PROG_INSTALL
dnl AC_PROG_MAKE_SET

ALL_LINGUAS="da no ru"
AM_GNOME_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

dnl Checks for libraries.
dnl Check -ldl
dnl AC_CHECK_LIB(dl, dlopen)
dnl Check for X
AC_PATH_X
dnl Check -ljpeg:
AC_CHECK_LIB(jpeg, jpeg_start_decompress)
dnl Check for glib
AM_PATH_GLIB(1.2.3)
dnl Check for gtk
AM_PATH_GTK(1.2.3)
dnl Check for gdk_imlib
AM_PATH_GDK_IMLIB(1.9.4)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_HEADERS(sys/param.h termios.h sgetty.h ttold.h ioctl-types.h \
	fcntl.h sgtty.h sys/ioctl.h sys/time.h termio.h unistd.h \
	endian.h byteswap.h asm/io.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Check if TIOCM_RTS is included in one of several possible files
AC_TRY_COMPILE([#include <termios.h>], [int foo = TIOCM_RTS;], 	
			AC_DEFINE(HAVE_RTS_IOCTL))
AC_TRY_COMPILE([#include <termio.h>], [int foo = TIOCM_RTS;], 	
			AC_DEFINE(HAVE_RTS_IOCTL))
AC_TRY_COMPILE([#include <ioctl-types.h>], [int foo = TIOCM_RTS;], 	
			AC_DEFINE(HAVE_RTS_IOCTL))
AC_TRY_COMPILE([#include <sys/ioctl.h>], [int foo = TIOCM_RTS;], 	
			AC_DEFINE(HAVE_RTS_IOCTL))

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(setreuid mkdir mktime strcspn strdup strerror strtol select)

dnl Local setup
dnl Is there a better way of doing docs?
GPHOTO_EXPAND_DIR(DOCDIR, "$datadir/gphoto/doc")
AC_DEFINE_UNQUOTED(DOCDIR, "$DOCDIR")

dnl Or gallery themes?
GPHOTO_EXPAND_DIR(GALLERYDIR, "$datadir/gphoto/gallery")
AC_DEFINE_UNQUOTED(GALLERYDIR, "$GALLERYDIR")

driversdir='${libdir}'
AC_SUBST(driversdir)

GPHOTO_EXPAND_DIR(DRIVERSDIR, "$libdir")
GPHOTO_EXPAND_DIR(DOCDIR, "$datadir/gphoto/doc")

gallerydir='${datadir}/gphoto/gallery'
AC_SUBST(gallerydir)

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${datadir}/locale")
fi

AC_OUTPUT([
	Makefile
	canon/Makefile
	casio/Makefile
	directory/Makefile
	fuji/Makefile
	gallery/CSStheme/Makefile
	gallery/Default/Makefile
	gallery/Makefile
	gallery/RedNGray/Makefile
	gphoto.spec
	intl/Makefile
	kodak/Makefile
	kodak/dc21x/Makefile
	kodak_generic/Makefile
	konica/Makefile
	konica_qmxxx/Makefile
	man/Makefile
	minolta/Makefile
	mustek/Makefile
	nikon/Makefile
	philips/Makefile
	photopc/Makefile
	po/Makefile.in
	ricoh/Makefile
	samsung/Makefile
	sony/Makefile
	sony/dscf55/Makefile
	src/Makefile
	src/icons/Makefile
])

echo "
gPhoto ${VERSION} configuration:

       sources location...... ${srcdir}
       camera libraries...... ${DRIVERSDIR}
       documentation......... ${DOCDIR}
       HTML Gallery themes... ${GALLERYDIR}
"
